infrastructure/auth-server/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth-server
  namespace: infrastructure
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: solher/auth-nginx-proxy-companion
        ports:
          - name: api
            containerPort: 3000
        volumeMounts:
          - mountPath: /var/lib/auth-nginx-proxy-companion
            name: data
      volumes:
        - name: data
          emptyDir: {}
