infrastructure/auth-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  ports:
  - name: api
    port: 3000
    targetPort: api
    protocol: TCP
  selector:
    app: auth-server
