infrastructure/auth-server/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-server
  namespace: infrastructure
  labels:
    app: auth-server
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: auth-server-tls
    hosts:
      - auth.minikube
  rules:
  - host: auth.minikube
    http:
      paths:
      - backend:
          serviceName: auth-server
          servicePort: api
